@@ -255,7 +255,7 @@ void CRT_setColors(int colorScheme) {
       CRT_colors[CHECK_BOX] = A_BOLD;
       CRT_colors[CHECK_MARK] = A_NORMAL;
       CRT_colors[CHECK_TEXT] = A_NORMAL;
-      CRT_colors[CPU_IOWAIT] = A_BOLD;
+      CRT_colors[CPU_IOWAIT] = A_NORMAL;
       CRT_colors[CPU_IRQ] = A_BOLD;
       CRT_colors[CPU_SOFTIRQ] = A_BOLD;
    } else if (CRT_colorScheme == COLORSCHEME_BLACKONWHITE) {
@@ -310,7 +310,7 @@ void CRT_setColors(int colorScheme) {
       CRT_colors[CHECK_BOX] = ColorPair(Blue,White);
       CRT_colors[CHECK_MARK] = ColorPair(Black,White);
       CRT_colors[CHECK_TEXT] = ColorPair(Black,White);
-      CRT_colors[CPU_IOWAIT] = ColorPair(Yellow,White);
+      CRT_colors[CPU_IOWAIT] = A_BOLD | ColorPair(Black, Black);
       CRT_colors[CPU_IRQ] = ColorPair(Blue,White);
       CRT_colors[CPU_SOFTIRQ] = ColorPair(Blue,White);
    } else if (CRT_colorScheme == COLORSCHEME_BLACKONWHITE2) {
@@ -365,7 +365,7 @@ void CRT_setColors(int colorScheme) {
       CRT_colors[CHECK_BOX] = ColorPair(Blue,Black);
       CRT_colors[CHECK_MARK] = ColorPair(Black,Black);
       CRT_colors[CHECK_TEXT] = ColorPair(Black,Black);
-      CRT_colors[CPU_IOWAIT] = ColorPair(Yellow,Black);
+      CRT_colors[CPU_IOWAIT] = A_BOLD | ColorPair(Black, Black);
       CRT_colors[CPU_IRQ] = A_BOLD | ColorPair(Blue,Black);
       CRT_colors[CPU_SOFTIRQ] = ColorPair(Blue,Black);
    } else if (CRT_colorScheme == COLORSCHEME_MIDNIGHT) {
@@ -420,7 +420,7 @@ void CRT_setColors(int colorScheme) {
       CRT_colors[CHECK_BOX] = ColorPair(Cyan,Blue);
       CRT_colors[CHECK_MARK] = A_BOLD | ColorPair(White,Blue);
       CRT_colors[CHECK_TEXT] = A_NORMAL | ColorPair(White,Blue);
-      CRT_colors[CPU_IOWAIT] = A_BOLD | ColorPair(Yellow,Blue);
+      CRT_colors[CPU_IOWAIT] = ColorPair(Yellow,Blue);
       CRT_colors[CPU_IRQ] = A_BOLD | ColorPair(Black,Blue);
       CRT_colors[CPU_SOFTIRQ] = ColorPair(Black,Blue);
    } else if (CRT_colorScheme == COLORSCHEME_BLACKNIGHT) {
@@ -531,7 +531,7 @@ void CRT_setColors(int colorScheme) {
       CRT_colors[CHECK_BOX] = ColorPair(Cyan,Black);
       CRT_colors[CHECK_MARK] = A_BOLD;
       CRT_colors[CHECK_TEXT] = A_NORMAL;
-      CRT_colors[CPU_IOWAIT] = ColorPair(Cyan,Black);
+      CRT_colors[CPU_IOWAIT] = A_BOLD | ColorPair(Black, Black);
       CRT_colors[CPU_IRQ] = ColorPair(Yellow,Black);
       CRT_colors[CPU_SOFTIRQ] = ColorPair(Magenta,Black);
    }
